test_regress/t/t_tagged_expr_wrongtype_bad.out
%Error: t/t_tagged_expr_wrongtype_bad.v:20:9: Tagged expression can only be used with tagged union type, got 'union{}t.non_tagged_union_t'
                                            : ... note: In instance 't'
   20 |     u = tagged a 42;
      |         ^~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Warning-WIDTHEXPAND: t/t_tagged_expr_wrongtype_bad.v:20:7: Operator ASSIGN expects 32 bits on the Assign RHS, but Assign RHS's TAGGEDEXPR 'a' generates 1 bits.
                                                          : ... note: In instance 't'
   20 |     u = tagged a 42;
      |       ^
                      ... For warning description see https://verilator.org/warn/WIDTHEXPAND?v=latest
                      ... Use "/* verilator lint_off WIDTHEXPAND */" and lint_on around source to disable this message.
%Error: Exiting due to
